force-app/main/default/objects/ssot__LoyaltyPartnerProduct__dlm/fields/ssot__rel_1697761181721_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761181721_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyPartnerProduct_LoyaltyProgram_rel</label>
    <referenceTo>ssot__LoyaltyProgramPartner__dlm</referenceTo>
    <relationshipLabel>LoyaltyPartnerProduct_LoyaltyProgram_rel</relationshipLabel>
    <relationshipName>rel_1697761181721_end</relationshipName>
    <type>Lookup</type>
</CustomField>