force-app/main/default/objects/ssot__LoyaltyPartnerProduct__dlm/fields/ssot__rel_1697761181790_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761181790_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyPartnerProduct_ProductId_map__rel</label>
    <referenceTo>ssot__BundleProduct__dlm</referenceTo>
    <relationshipLabel>LoyaltyPartnerProduct_ProductId_map__rel</relationshipLabel>
    <relationshipName>rel_1697761181790_end</relationshipName>
    <type>Lookup</type>
</CustomField>